# sysid-pagmo

./: CMakeLists.txt  library.h
cmake/: FindPAGMO.cmake
examples/: CMakeLists.txt  SIR.cpp  SIR_og.cpp  test.cpp  workflow.cpp
include/: constraints.h  dataset.h  dynamics.h  parameters.h  problem.h
src/: problem.cpp
